--- a/Insta_app/templates/dashboard.html
+++ b/Insta_app/templates/dashboard.html
@@ -93,7 +93,7 @@
   <div id="commentModal" class="modal" style="display:none;">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <div id="postcommentdiv"></div>
+      <div id="post-comment-div"></div>
       <div>
         <input type="text" id="commentInput" placeholder="comment">
         <button id="submitComment">Submit</button>
